--- a/index.html
+++ b/index.html
@@ -347,81 +347,6 @@
         </details>
         <hr class="my-6">
         <details class="mb-4">
-          <summary class="font-semibold text-lg cursor-pointer">Ending Message (optional)</summary>
-          <div class="mt-4 space-y-4">
-          <label for="ending" class="block text-sm font-semibold text-gray-700 mb-2">Ending Message (optional)</label>
-          <input id="ending" class="w-full px-4 py-3 border border-gray-300 rounded-lg" placeholder="Love, The Johnsons" />
-          <label for="fontFrom" class="block text-sm font-semibold text-gray-700 mt-4 mb-2">Final Message Font</label>
-          <select id="fontFrom" class="w-full px-4 py-3 border border-gray-300 rounded-lg">
-              <option value="Poppins">Poppins</option>
-              <option value="Playfair Display">Playfair Display</option>
-              <option value="Dancing Script">Dancing Script</option>
-              <option value="Montserrat">Montserrat</option>
-              <option value="Great Vibes">Great Vibes</option>
-              <option value="Roboto">Roboto</option>
-              <option value="Lora">Lora</option>
-              <option value="Pacifico">Pacifico</option>
-              <option value="Crimson Text">Crimson Text</option>
-              <option value="Sacramento">Sacramento</option>
-            </select>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-2 mt-4">
-              <div>
-                <label for="fromTextColor" class="block text-xs font-semibold text-gray-700 mb-1">Text Color</label>
-                <select id="fromTextColor" class="w-full px-4 py-2 border border-gray-300 rounded-lg mb-2">
-                  <option value="">Use Default</option>
-                  <option value="#000000">Black</option>
-                  <option value="#ffffff">White</option>
-                  <option value="#374151">Dark Gray</option>
-                  <option value="#dc2626">Red</option>
-                  <option value="#ea580c">Orange</option>
-                  <option value="#ca8a04">Yellow</option>
-                  <option value="#16a34a">Green</option>
-                  <option value="#2563eb">Blue</option>
-                  <option value="#7c3aed">Purple</option>
-                  <option value="#ff69b4">Pink</option>
-                  <option value="custom">Custom Color</option>
-                </select>
-                <div id="fromTextCustom" class="hidden">
-                  <div class="flex items-center space-x-3">
-                    <input type="color" id="fromTextPicker" class="w-12 h-12 border rounded-lg" value="#000000" />
-                    <input type="text" id="fromTextHex" class="flex-1 px-4 py-2 border rounded-lg" pattern="^#([0-9A-Fa-f]{6})$" placeholder="#000000" />
-                  </div>
-                </div>
-              </div>
-              <div>
-                <label for="fromOutlineColor" class="block text-xs font-semibold text-gray-700 mb-1">Outline Color</label>
-                <select id="fromOutlineColor" class="w-full px-4 py-2 border border-gray-300 rounded-lg mb-2">
-                  <option value="">Use Default</option>
-                  <option value="transparent">None</option>
-                  <option value="#000000">Black</option>
-                  <option value="#ffffff">White</option>
-                  <option value="#374151">Dark Gray</option>
-                  <option value="#dc2626">Red</option>
-                  <option value="#ea580c">Orange</option>
-                  <option value="#ca8a04">Yellow</option>
-                  <option value="#16a34a">Green</option>
-                  <option value="#2563eb">Blue</option>
-                  <option value="#7c3aed">Purple</option>
-                  <option value="#ff69b4">Pink</option>
-                  <option value="custom">Custom Color</option>
-                </select>
-                <div id="fromOutlineCustom" class="hidden">
-                  <div class="flex items-center space-x-3">
-                    <input type="color" id="fromOutlinePicker" class="w-12 h-12 border rounded-lg" value="#ffffff" />
-                    <input type="text" id="fromOutlineHex" class="flex-1 px-4 py-2 border rounded-lg" pattern="^#([0-9A-Fa-f]{6})$" placeholder="#ffffff" />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="flex items-center space-x-4 mt-2">
-              <label class="text-xs"><input id="fromBold" type="checkbox" class="mr-1" />Bold</label>
-              <label class="text-xs"><input id="fromItalic" type="checkbox" class="mr-1" />Italic</label>
-          <label class="text-xs"><input id="fromCaps" type="checkbox" class="mr-1" />Caps</label>
-            </div>
-          </div>
-        </details>
-        <hr class="my-6">
-        <details class="mb-4">
           <summary class="font-semibold text-lg cursor-pointer">Photo Upload (optional)</summary>
           <div class="mt-4 space-y-4">
           <label for="photo" class="block text-sm font-semibold text-gray-700 mb-2">
@@ -461,12 +386,97 @@
           </div>
         </div>
       </div>
+  </div>
+  <div class="flex justify-between mt-4">
+    <button type="button" class="back px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Back</button>
+    <button type="button" class="next px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Next</button>
+  </div>
+  <div class="step form-step bg-white rounded-2xl shadow-xl p-8" id="section4">
+    <div class="flex items-center mb-6">
+      <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">D</div>
+      <h2 class="text-2xl font-bold text-gray-800">Ending Message</h2>
+    </div>
+    <div class="space-y-4">
+      <h3 class="text-lg font-semibold text-gray-800">What should your ending message say?</h3>
+      <label for="ending" class="block text-sm font-semibold text-gray-700 mb-2">Ending Message (optional)</label>
+      <input id="ending" class="w-full px-4 py-3 border border-gray-300 rounded-lg" placeholder="Love, The Johnsons" />
+      <h3 class="text-lg font-semibold text-gray-800">Which font should it use?</h3>
+      <label for="fontFrom" class="block text-sm font-semibold text-gray-700 mt-1 mb-2">Final Message Font</label>
+      <select id="fontFrom" class="w-full px-4 py-3 border border-gray-300 rounded-lg">
+        <option value="Poppins">Poppins</option>
+        <option value="Playfair Display">Playfair Display</option>
+        <option value="Dancing Script">Dancing Script</option>
+        <option value="Montserrat">Montserrat</option>
+        <option value="Great Vibes">Great Vibes</option>
+        <option value="Roboto">Roboto</option>
+        <option value="Lora">Lora</option>
+        <option value="Pacifico">Pacifico</option>
+        <option value="Crimson Text">Crimson Text</option>
+        <option value="Sacramento">Sacramento</option>
+      </select>
+      <h3 class="text-lg font-semibold text-gray-800">Choose text and outline colors</h3>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-2 mt-2">
+        <div>
+          <label for="fromTextColor" class="block text-xs font-semibold text-gray-700 mb-1">Text Color</label>
+          <select id="fromTextColor" class="w-full px-4 py-2 border border-gray-300 rounded-lg mb-2">
+            <option value="">Use Default</option>
+            <option value="#000000">Black</option>
+            <option value="#ffffff">White</option>
+            <option value="#374151">Dark Gray</option>
+            <option value="#dc2626">Red</option>
+            <option value="#ea580c">Orange</option>
+            <option value="#ca8a04">Yellow</option>
+            <option value="#16a34a">Green</option>
+            <option value="#2563eb">Blue</option>
+            <option value="#7c3aed">Purple</option>
+            <option value="#ff69b4">Pink</option>
+            <option value="custom">Custom Color</option>
+          </select>
+          <div id="fromTextCustom" class="hidden">
+            <div class="flex items-center space-x-3">
+              <input type="color" id="fromTextPicker" class="w-12 h-12 border rounded-lg" value="#000000" />
+              <input type="text" id="fromTextHex" class="flex-1 px-4 py-2 border rounded-lg" pattern="^#([0-9A-Fa-f]{6})$" placeholder="#000000" />
+            </div>
+          </div>
+        </div>
+        <div>
+          <label for="fromOutlineColor" class="block text-xs font-semibold text-gray-700 mb-1">Outline Color</label>
+          <select id="fromOutlineColor" class="w-full px-4 py-2 border border-gray-300 rounded-lg mb-2">
+            <option value="">Use Default</option>
+            <option value="transparent">None</option>
+            <option value="#000000">Black</option>
+            <option value="#ffffff">White</option>
+            <option value="#374151">Dark Gray</option>
+            <option value="#dc2626">Red</option>
+            <option value="#ea580c">Orange</option>
+            <option value="#ca8a04">Yellow</option>
+            <option value="#16a34a">Green</option>
+            <option value="#2563eb">Blue</option>
+            <option value="#7c3aed">Purple</option>
+            <option value="#ff69b4">Pink</option>
+            <option value="custom">Custom Color</option>
+          </select>
+          <div id="fromOutlineCustom" class="hidden">
+            <div class="flex items-center space-x-3">
+              <input type="color" id="fromOutlinePicker" class="w-12 h-12 border rounded-lg" value="#ffffff" />
+              <input type="text" id="fromOutlineHex" class="flex-1 px-4 py-2 border rounded-lg" pattern="^#([0-9A-Fa-f]{6})$" placeholder="#ffffff" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <h3 class="text-lg font-semibold text-gray-800">Style options</h3>
+      <div class="flex items-center space-x-4 mt-2">
+        <label class="text-xs"><input id="fromBold" type="checkbox" class="mr-1" />Bold</label>
+        <label class="text-xs"><input id="fromItalic" type="checkbox" class="mr-1" />Italic</label>
+        <label class="text-xs"><input id="fromCaps" type="checkbox" class="mr-1" />Caps</label>
+      </div>
     </div>
     <div class="flex justify-between mt-4">
       <button type="button" class="back px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Back</button>
       <button type="button" class="next px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Next</button>
     </div>
-    <!-- Generate URL -->
+  </div>
+  <!-- Generate URL -->
     <div class="step bg-white rounded-2xl shadow-xl p-8 text-center" id="generateStep">
       <button id="generateBtn" type="button" class="w-full py-3 rounded-lg font-semibold bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Generate My Reveal URL</button>
       <div class="flex justify-start mt-4">
