--- a/index.html
+++ b/index.html
@@ -420,35 +420,6 @@
             </div>
           </div>
         </details>
-        <hr class="my-6">
-        <details class="mb-4">
-          <summary class="font-semibold text-lg cursor-pointer">Photo Upload (optional)</summary>
-          <div class="mt-4 space-y-4">
-          <label for="photo" class="block text-sm font-semibold text-gray-700 mb-2">
-            Photo URL <span class="text-gray-400">(optional)</span>
-            <span class="inline-block relative ml-1 group cursor-help">
-              <span class="bg-gray-400 text-white rounded-full w-4 h-4 text-xs flex items-center justify-center hover:bg-gray-500">?</span>
-              <div class="absolute left-0 top-6 bg-gray-800 text-white text-xs rounded-lg p-3 w-64 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 z-10 shadow-lg">
-                <p><strong>Steps to upload:</strong></p>
-                <ol class="list-decimal ml-4 space-y-1">
-                  <li>Go to <strong>imgur.com/upload</strong></li>
-                  <li>Drag and drop your photo onto the page</li>
-                  <li>Copy the image link on the right</li>
-                  <li>Paste it here</li>
-                </ol>
-              </div>
-            </span>
-          </label>
-          <input
-            type="url"
-            id="photo"
-            name="photo"
-            placeholder="https://i.imgur.com/yourimage.jpg"
-            class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 transition-all"
-          >
-          <p class="text-xs text-gray-500 mt-1">Upload to Imgur, Postimg, etc., and paste the direct link here.</p>
-          </div>
-        </details>
       </div>
       <div class="flex flex-col items-center order-first md:order-none">
         <h3 class="text-lg font-semibold text-gray-700 mb-2">Live Preview — Page 2</h3>
@@ -466,6 +437,37 @@
       <button type="button" class="back px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Back</button>
       <button type="button" class="next px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Next</button>
     </div>
+    <div class="step form-step bg-white rounded-2xl shadow-xl p-8" id="photoStep">
+      <h2 class="form-step-question">Would you like to include a photo (optional)?</h2>
+      <label for="photo" class="block text-sm font-semibold text-gray-700 mb-2">
+        Photo URL <span class="text-gray-400">(optional)</span>
+        <span class="inline-block relative ml-1 group cursor-help">
+          <span class="bg-gray-400 text-white rounded-full w-4 h-4 text-xs flex items-center justify-center hover:bg-gray-500">?</span>
+          <div class="absolute left-0 top-6 bg-gray-800 text-white text-xs rounded-lg p-3 w-64 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 z-10 shadow-lg">
+            <p><strong>Steps to upload:</strong></p>
+            <ol class="list-decimal ml-4 space-y-1">
+              <li>Go to <strong>imgur.com/upload</strong></li>
+              <li>Drag and drop your photo onto the page</li>
+              <li>Copy the image link on the right</li>
+              <li>Paste it here</li>
+            </ol>
+          </div>
+        </span>
+      </label>
+      <input
+        type="url"
+        id="photo"
+        name="photo"
+        placeholder="https://i.imgur.com/yourimage.jpg"
+        class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 transition-all"
+      >
+      <p class="text-xs text-gray-500 mt-1">Upload to Imgur, Postimg, etc., and paste the direct link here.</p>
+      <div class="flex justify-between mt-4">
+        <button type="button" class="back px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Back</button>
+        <button type="button" class="next px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Next</button>
+      </div>
+    </div>
+
     <!-- Generate URL -->
     <div class="step bg-white rounded-2xl shadow-xl p-8 text-center" id="generateStep">
       <button id="generateBtn" type="button" class="w-full py-3 rounded-lg font-semibold bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Generate My Reveal URL</button>
